<?xml version="1.0"?>
<package>
  <name>can_dynamix</name>
  <version>0.0.0</version>
  <description>The can_dynamix package</description>

  <maintainer email="ros@todo.todo">ros</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

<!--  <build_depend>can_driver</build_depend>  -->
  <build_depend>roscpp</build_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

<!--  <run_depend>can_driver</run_depend>   -->
  <run_depend>roscpp</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>


  <export>

  </export>
</package>
